# CudaAndOpenCL

./: README.md
CenterpointPreprocessCUDA/: main.cpp  new_header.hpp  preprocess_kernel.cu  preprocess_kernel.h
CenterpointPreprocessOpenCL/: CMakeLists.txt  main.cpp  preprocess_kernel.cl  preprocess_kernel.cpp  preprocess_kernel.hpp
CudaExplore/: compilation_steps.txt  main.cpp  vector_kernel.cu
OpenCLSimpleStructure/: CMakeLists.txt  Makefile  OpenCLSimpleStructure  main.cpp
OpenCLSimpleStructure/include/: elementwise_multiply.hpp
OpenCLSimpleStructure/kernel/: elementwise_multiply.cl  vector_addition.cl
OpenCLSimpleStructure/src/: elementwise_multiply.cpp
OpenClSort/: CMakeLists.txt  compute_sort.cpp
OpenclExplore/: compilation_steps.txt  main.cpp  vector_add.cl
